--- a/src/App.css
+++ b/src/App.css
@@ -52,3 +52,10 @@
   font-size: 50px;
   margin: 75% 0;
 }
+.resume{
+  font-size: small;
+}
+.description {
+  color:chartreuse;
+  background-color: blue;
+}
